# CNPJ-Receita-Federal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  descricao-dados.md  docker-compose.yml  env_example  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  tasks.ps1
.github/workflows/: ci.yml
.trae/documents/: quality-assurance-guide.md  quality-testing-requirements.md  testing-architecture.md
docs/: auto-repair.md  boas-praticas-indices.md  descricao-dados.md  diagrama_er.md  docker.md  download.md  index.md  user-agent.md
queries/: 001_split_estabelecimentos_by_uf.sql
src/: __main__.py  check_update.py  config.py  consolidate_csv.py  constraints.sql  database_loader.py  downloader.py  extract_files.py  migrate_to_rfb.sql  models.py  schema.sql  settings.py  state.py  validation.py
src/cnpj_receita_federal/models/: model.py
tests/: __init__.py  test_check_update.py  test_consolidate_csv.py  test_consolidate_extra.py  test_copy_sql.py  test_db_integration.py  test_downloader.py  test_etl_cleaners.py  test_extract_files.py  test_integration_loader.py  test_loader_cleaners.py  test_loader_fk_constraints.py  test_loader_internals.py  test_loader_quality.py  test_main_cli.py  test_state.py  test_validation.py  test_validation_regression.py
