[project]
name = "cnpj-receita-federal"
version = "0.1.0"
description = ""
authors = [
    {name = "Folclore",email = "chessmota@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "psycopg[binary] (>=3.2.1,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "tqdm (>=4.66.4,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "pandera[io] (>=0.20.3,<1.0.0)",
    "charset-normalizer (>=3.3.2,<4.0.0)"
]

# Packaging configuration removed; this project is app-oriented and not distributing a package.


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
