[project]
name = "cnpj-receita-federal"
version = "0.1.0"
description = ""
authors = [
    {name = "Folclore",email = "chessmota@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "tqdm (>=4.66.4,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "pandera[io] (>=0.20.3,<1.0.0)",
    "charset-normalizer (>=3.3.2,<4.0.0)",
    "typer[all] (>=0.9.0,<1.0.0)",
    "httpx[http2] (>=0.27.0,<1.0.0)",
    "tenacity (>=8.2.3,<9.0.0)",
    "aiofiles (>=23.2.1,<24.0.0)",
    "curl_cffi (>=0.7.4,<1.0.0)"
]

# Packaging configuration removed; this project is app-oriented and not distributing a package.


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
